Koan CHANGELOG

Detail of software changes that are not packaging related.
These *should* correspond with a bump in the software version.  This
wasn't consistant for 0.1.X builds, though it will be in the future.

* Wed Oct 25 2006 Michael DeHaan <mdehaan@redhat.com> - 0.2.4-1
- To be more generic, koan uses --virt instead of --xen now.  --xen
  will continue to work for some time.  Cobbler has updated it's YAML
  to correspond with the Xen->Virt renaming, and koan will be backward
  compatible.  So, basically, users shouldn't be affected all that much.

* Tue Oct 24 2006 Michael DeHaan <mdehaan@redhat.com> - 0.2.3-1
- bugfixes related to missing kickstart and MAC info if not filled in
  by the profile/system definition.

* Wed Oct 11 2006 Michael DeHaan <mdehaan@redhat.com> - 0.2.2-1
- Bundled subprocess to allow it's use under python 2.3 (RHEL4, etc)
- Hack to koan's main app to allow enchant to tolerate more distros

* Mon Oct 09 2006 Michael DeHaan <mdehaan@redhat.com> - 0.2.1-1
- Added --list-profiles and --list-systems option to show available
  setups defined on the provisioning server.  See manpage.

* Wed Sep 20 2006 Michael DeHaan <mdehaan@redhat.com> - 0.1.1-7
- When provisioning Xen, if --system is a MAC address, use that
  as the Xen MAC address.
- Fixes to command line argument conflict resolution
- A few fixes (mainly along error paths)

* Thu Jul 20 2006 Michael DeHaan <mdehaan@redhat.com> - 0.1.1-4
- Fixed python import paths in yaml code, which errantly assumed yaml was installed as a module.

* Fri Jul 12 2006 Michael DeHaan <mdehaan@redhat.com> - 0.1.1-3
- allow installing with per-system cobbler data in addition to per-profile

* Wed Jun 28 2006 Michael DeHaan <mdehaan@redhat.com> - 0.1.0-1
- genesis
