@@ -4,6 +4,10 @@ Detail of software changes that are not packaging related.
 These *should* correspond with a bump in the software version.  This
 wasn't consistant for 0.1.X builds, though it will be in the future.
 
+* Thr Dec 07 2006 Michael DeHaan <mdehaan@redhat.com> - 0.2.5-1
+- Now probes bootloader to determine what bootloader to edit, rather
+  than using the first installed package.
+
 * Wed Oct 25 2006 Michael DeHaan <mdehaan@redhat.com> - 0.2.4-1
 - To be more generic, koan uses --virt instead of --xen now.  --xen
   will continue to work for some time.  Cobbler has updated it's YAML
